--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-frag": "^1.3.1",
     "vue-html2pdf": "^1.8.0",
     "vue-router": "^3.5.1",
+    "vue-top-progress": "^0.7.0",
     "vuex": "^3.6.2",
     "vuex-persist": "^3.1.3"
   },
